# rev-xbgas

./: .gitignore  .gitmodules  BUILD.sh  CMakeLists.txt  README.md  revcpu.sh
.githooks/: pre-commit
common/include/: CMakeLists.txt  RevCommon.h  XbgasAddr.h
include/: AllRevInstTables.h  CMakeLists.txt  RevCPU.h  RevCSR.h  RevCore.h  RevCorePasskey.h  RevFeature.h  RevHart.h  RevInstHelpers.h  RevInstTable.h  RevLoader.h  RevMem.h  RevMemCtrl.h  RevProc.h  RevRegFile.h  RevRmtMemCtrl.h  RevThread.h  RevTracer.h  XbgasNIC.h
include/insns/: CMakeLists.txt  RV32D.h  RV32F.h  RV32I.h  RV32X.h  RV64A.h  RV64D.h  RV64F.h  RV64I.h  RV64X.h  Xamo.h  Xlrsc.h
include/softfp/: CMakeLists.txt  Makefile
src/: CMakeLists.txt  Makefile  RevCPU.cc  RevCPU.h  RevCore.cc  RevExt.cc  RevExt.h  RevFeature.cc  RevFeature.h  RevInstTable.h  RevInstTables.h  RevLoader.cc  RevLoader.h  RevMem.cc  RevMem.h  RevMemCtrl.cc  RevNIC.cc  RevProc.cc  RevProc.h  RevRmtMemCtrl.cc  RevSysCalls.cc  RevSysCalls.h  RevThreadCtx.cc  RevXbgas.cc  RevXbgas.h  XbgasNIC.cc  XbgasNIC.h
src/insns/: RV32A.h  RV32D.h  RV32E.h  RV32F.h  RV32I.h  RV32M.h  RV32X.h  RV64A.h  RV64D.h  RV64F.h  RV64I.h  RV64M.h  RV64P.h  RV64X.h
src/xbgas-runtime/: Makefile  xbrtime.h  xbrtime.h.gch  xbrtime_alloc.c  xbrtime_init.c  xbrtime_util_asm.s
src/xbgas_runtime/: Makefile  xbrtime.h  xbrtime_alloc.c  xbrtime_alloc.h  xbrtime_api.c  xbrtime_api_asm.s  xbrtime_barrier.c  xbrtime_broadcast.c  xbrtime_init.c  xbrtime_macros.h  xbrtime_reduce.c  xbrtime_scatter.c  xbrtime_types.h  xbrtime_util.c  xbrtime_util_asm.s
test/: CMakeLists.txt
test/add/: Makefile  add.c  rev-test-add.py
test/big_loop/: Makefile  big_loop.py
test/ex5/: Makefile  rev-test-ex5.py
test/ex6/: Makefile  ex6.c  rev-test-ex6.py
test/fenv/: fenv_gentests.cc
test/float/: Makefile  float.c  rev-test-float.py
test/isa/: .asm  ld.asm  lrsc.c  lrscw.c  rev-isa-test-memh.py
test/math_log/: Makefile  math_log.asm  math_log.c  math_log.trace  math_log_c.asm  math_log_c.trace  rev-test-log.py  tmp.txt
test/memh_1/: Makefile  rev-test-memh1.py
test/memh_ld/: Makefile  ld.c  rev-test-memh_ld.py
test/minfft/: Makefile  rev-test-ex1.py  tmp.txt
test/pan_test1/: StatisticOutput.csv  rev-pan-test.py
test/print/: Makefile  print.c  print.s  rev-test-print.py
test/tmp/: xfer_test_2.c
test/tracer/: Makefile  rev-test-tracer-memh.py  tracer.c
test/xbgas/: CMakeLists.txt
test/xbgas_amo/: CMakeLists.txt  Makefile  eamoaddw.c  eamoandw.c  eamomaxuw.c  eamomaxw.c  eamominuw.c  eamominw.c  eamoorw.c  eamoswapw.c  eamoxorw.c  elrscd.c  elrscw.c  rev-xbgas-amo-test.py  (+1 more)
xbrtime/: CMakeLists.txt  README.md  xbrtime.h  xbrtime_alloc.c  xbrtime_api.c  xbrtime_api_asm.s  xbrtime_broadcast.c  xbrtime_collectives.h  xbrtime_reduce.c  xbrtime_types.h  xbrtime_util.c
xbrtime/asm/: xbrtime_api_asm.s  xbrtime_util_asm.s
xbrtime/include/: xbrtime_alloc.h  xbrtime_api.h
xbrtime/src/: xbrtime_alloc.c  xbrtime_alltoall.c  xbrtime_api.c  xbrtime_barrier.c  xbrtime_broadcast.c  xbrtime_gather.c  xbrtime_gather_all.c  xbrtime_init.c  xbrtime_reduce.c  xbrtime_reduce_all.c  xbrtime_scatter.c  xbrtime_util.c
xbrtime/test/-xbrtime_xfer_alltoall/: xfer_alltoall.c
xbrtime/test/-xbrtime_xfer_broadcast/: xfer_broadcast.c
xbrtime/test/nas/C/IS/: Makefile  is.c  npbparams.h
xbrtime/test/nas/C/common/: c_print_results.c
xbrtime/test/nas/C/config/: make.def
xbrtime/test/nas/C/sys/: setparams
xbrtime/test/two_arrays/: rev-xbgas-xfer.py  xfer_twoarrays.c
xbrtime/test/xbrtime_alloc/: Makefile  alloc_test_1.c  rev-xbgas-test.py
xbrtime/test/xbrtime_barrier/: Makefile  barrier.c  rev-xbgas-test.py
xbrtime/test/xbrtime_init/: Makefile  init_test_1.c  rev-xbgas-test.py
xbrtime/test/xbrtime_xfer_alltoall/: rev-xbgas-xfer.py  xfer_alltoall.c
xbrtime/test/xbrtime_xfer_broadcast/: Makefile  rev-xbgas-xfer.py  xfer_broadcast.c
xbrtime/test/xbrtime_xfer_bulk_get/: rev-xbgas-xfer.py  xfer_bulk_get.c
xbrtime/test/xbrtime_xfer_bulk_put/: rev-xbgas-xfer.py  xfer_bulk_put.c
xbrtime/test/xbrtime_xfer_gather/: xfer_gather.c
xbrtime/test/xbrtime_xfer_get/: Makefile  rev-xbgas-xfer.py  xfer_get.asm  xfer_get.c
xbrtime/test/xbrtime_xfer_put/: Makefile  rev-xbgas-xfer.py  xfer_put.c
xbrtime/test/xbrtime_xfer_reduction/: rev-xbgas-xfer.py  xfer_reduction.c
xbrtime/test/xbrtime_xfer_scatter/: rev-xbgas-xfer.py
(+197 files in other folders)
